Back button on book page

--- a/samples/book/index.html
+++ b/samples/book/index.html
@@ -9,6 +9,7 @@
       <title>The Golden Compass</title>
    </head>
    <body id="top">
+      <a href="../../index.html" id="back-button">Back to Developer Page</a>
       <div id="wrapper">
          <header>
             <nav>
