Renamed game landing and updated src code link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </div><!-- end card title -->
                      </a></div><!-- end sample card-->
 
-                     <div class="sample-card"><a href="samples/game/game.html">
+                     <div class="sample-card"><a href="samples/game/index.html">
                         <picture>
                            <!-- add art-directed image -->
                            <img src="images/game-sm-1x.png" alt="A thumbnail for a web app that is a sliding tile puzzle game from a photo of a black cat." srcset="images/game-sm-2x.png 2x, images/game-sm-1x.png 1x">
