--- a/samples/game/index.html
+++ b/samples/game/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Marlon Castillo">
     <meta name="description" content="A brief tile puzzle game using jQuery scripts for its logic.">
     <link rel="stylesheet" href="game.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Zilla+Slab:400,400i,700" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Anton%7CZilla+Slab:400,400i,700" rel="stylesheet"> 
     <title>Tile Game</title>	
   </head>
   <body>
@@ -24,15 +24,15 @@
         <p>Time will begin counting on first move.</p>
         <div id="board">
           <div id="grid">
-            <div class="tile"><img src="images/SockeyOneRow1A.jpg"></div>
-            <div class="tile"><img src="images/SockeyOneRow1B.jpg"></div>
-            <div class="tile"><img id="blank" src="images/blank.jpg"></div>
-            <div class="tile"><img src="images/SockeyOneRow2A.jpg"></div>
-            <div class="tile"><img src="images/SockeyOneRow2B.jpg"></div>
-            <div class="tile"><img src="images/SockeyOneRow2C.jpg"></div>
-            <div class="tile"><img src="images/SockeyOneRow3A.jpg"></div>
-            <div class="tile"><img src="images/SockeyOneRow3B.jpg"></div>
-            <div class="tile"><img src="images/SockeyOneRow3C.jpg"></div>
+            <div class="tile"><img src="images/SockeyOneRow1A.jpg" alt="The right ear and a portion of the right eye of a black cat."></div>
+            <div class="tile"><img src="images/SockeyOneRow1B.jpg" alt="The left ear and portion of the left eye of a black cat."></div>
+            <div class="tile"><img id="blank" src="images/blank.jpg" alt="A white (empty) square."></div>
+            <div class="tile"><img src="images/SockeyOneRow2A.jpg" alt="The right side of a cat's muzzle and neck, with white whiskers. "></div>
+            <div class="tile"><img src="images/SockeyOneRow2B.jpg" alt="The left side of a cat's muzzle and neck, with white whiskers."></div>
+            <div class="tile"><img src="images/SockeyOneRow2C.jpg" alt="The left side of black cat's body."></div>
+            <div class="tile"><img src="images/SockeyOneRow3A.jpg" alt="The two front paws of a black cat with white toes."></div>
+            <div class="tile"><img src="images/SockeyOneRow3B.jpg" alt="The upper portion of a black cat's torso laying on the ground."></div>
+            <div class="tile"><img src="images/SockeyOneRow3C.jpg" alt="The lower portion of a black cat's torso laying on the ground."></div>
           </div>
           <div id="menu">
             <h2>Time</h2>
@@ -44,7 +44,7 @@
       <!-- Need to add section with code for game behavior. -->
     </main>
     <footer>
-      <p>View <a href="code.html">source code</a></p>
+      <p>View <a href="https://github.com/mcastillo1030/portfolio/blob/master/samples/game/scripts/game.js">source code on GitHub</a></p>
       <p>Photo of feline friend "Sockey" by Professor Dan Hall.</p>
       <p id="copyright">Website design, game programming, and logic by <a href="../../index.html">Marlon Castillo</a>.</p>
     </footer>
