Corrected lan tag and fixed contact.html

--- a/samples/podcast/contact-confirm.html
+++ b/samples/podcast/contact-confirm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="Listen to the real stories behind some of the world's most well-known folklore.">
