--- a/samples/podcast/more-lore.html
+++ b/samples/podcast/more-lore.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="Listen to the real stories behind some of the world's most well-known folklore.">
