--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                <div class="card-section education">
                   <h2>Education</h2>
-                  <p>I graduated from <a href="https://www.aacc.edu/" class="body-link">Anne Arundel Community College</a> in Arnold, MD with an Associate of Applied Science (A.A.S.) degree in Internet Application Development.</p>
+                  <p>I graduated from <a href="https://www.aacc.edu/" class="body-link">Anne Arundel Community College</a> in Arnold, MD with an Associate of Applied Science (A.A.S.) degree in Internet Applications Development.</p>
                   <p>I also achieved a certificate in Computer Information Systems&mdash;Scientific Programming due to my focus on software design, high-level programming languages, and UNIX/LINUX.</p>
                </div><!-- end education section -->
 
