--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
          <meta name="author" content="Marlon Castillo">
          <meta name="description" content="Marlon Castillo is a Web Developer local to the DC, Maryland, and Virginia area. Marlon specializes in building responsive and fully accessible websites as well as developing front-end and back-end apps.">
          <meta name="viewport" content="widht=device-width, initial-scale=1">
+         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+         <link rel="manifest" href="/site.webmanifest">
          <link rel="stylesheet" type="text/css" href="display.css">
          <title>Marlon Castillo - Programming &amp; Design</title>
          <style type="text/css">
@@ -50,50 +54,35 @@
                   <h2>Work Samples</h2>
                   <div id="samples-grid">
                      <div class="sample-card"><a href="samples/book/index.html">
-                        <picture>
-                           <!-- add art-directed image -->
-                           <img src="images/book-sm-1x.png" alt="A thumbnail for a web page for the book The Golden Compass by Philip Pullman." srcset="images/book-sm-2x.png 2x, images/book-sm-1x.png 1x">
-                        </picture>
+                        <img src="images/book-sm-1x.png" alt="A thumbnail for a web page for the book The Golden Compass by Philip Pullman." srcset="images/book-sm-2x.png 2x, images/book-sm-1x.png 1x">
                         <div class="card-title">
                            <p>Single-page website for a book developed as a class project.</p>
                         </div><!-- end card title -->
                      </a></div><!-- end sample card-->
 
                      <div class="sample-card"><a href="samples/podcast/index.html">
-                        <picture>
-                           <!-- add art-directed image -->
-                           <img src="images/podcast-sm-1x.png" alt="A thumbnail for a web page for the Lore podcast series by Aaron Mahnke." srcset="images/podcast-sm-2x.png 2x, images/podcast-sm-1x.png 1x">
-                        </picture>
+                        <img src="images/podcast-sm-1x.png" alt="A thumbnail for a web page for the Lore podcast series by Aaron Mahnke." srcset="images/podcast-sm-2x.png 2x, images/podcast-sm-1x.png 1x">
                         <div class="card-title">
                            <p>Responsive website for a podcast developed as a class project.</p>
                         </div><!-- end card title -->
                      </a></div><!-- end sample card-->
 
                      <div class="sample-card"><a href="samples/conf/index.html">
-                        <picture>
-                           <!-- add art-directed image -->
-                           <img src="images/conference-sm-1x.png" alt="A thumbnail for a web page for the Typographics coference hosted in New York City at The Cooper Union." srcset="images/conference-sm-2x.png 2x, images/conference-sm-1x.png 1x">
-                        </picture>
+                        <img src="images/conference-sm-1x.png" alt="A thumbnail for a web page for the Typographics coference hosted in New York City at The Cooper Union." srcset="images/conference-sm-2x.png 2x, images/conference-sm-1x.png 1x">
                         <div class="card-title">
                            <p>Multiple page website for a conference developed as a class project.</p>
                         </div><!-- end card title -->
                      </a></div><!-- end sample card-->
 
                      <div class="sample-card"><a href="samples/game/game.html">
-                        <picture>
-                           <!-- add art-directed image -->
-                           <img src="images/game-sm-1x.png" alt="A thumbnail for a web app that is a sliding tile puzzle game from a photo of a black cat." srcset="images/game-sm-2x.png 2x, images/game-sm-1x.png 1x">
-                        </picture>
+                        <img src="images/game-sm-1x.png" alt="A thumbnail for a web app that is a sliding tile puzzle game from a photo of a black cat." srcset="images/game-sm-2x.png 2x, images/game-sm-1x.png 1x">
                         <div class="card-title">
                            <p>Sliding tile puzzle game programmed using jQuery. Logic developed as a class project; functionality and design developed as a personal project.</p>
                         </div><!-- end card title -->
                      </a></div><!-- end sample card-->
 
                      <div class="sample-card"><a href="http://ec2-18-188-178-20.us-east-2.compute.amazonaws.com/">
-                        <picture>
-                           <!-- add art-directed image -->
-                           <img src="images/weather-sm-1x.png" alt="A thumbnail for a web app that is a sliding lightweight weather forecast application." srcset="images/weather-sm-2x.png 2x, images/weather-sm-1x.png 1x">
-                        </picture>
+                        <img src="images/weather-sm-1x.png" alt="A thumbnail for a web app that is a sliding lightweight weather forecast application." srcset="images/weather-sm-2x.png 2x, images/weather-sm-1x.png 1x">
                         <div class="card-title">
                            <p>Weather forecast app programmed using vanilla JS, developed as a personal project.</p>
                         </div><!-- end card title -->
