--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
          <meta name="author" content="Marlon Castillo">
          <meta name="description" content="Marlon Castillo is a Web Developer local to the DC, Maryland, and Virginia area. Marlon specializes in building responsive and fully accessible websites as well as developing front-end and back-end apps.">
          <meta name="viewport" content="widht=device-width, initial-scale=1">
-         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+         <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
          <link rel="manifest" href="/site.webmanifest">
          <link rel="stylesheet" type="text/css" href="display.css">
          <title>Marlon Castillo - Programming &amp; Design</title>
