Why did this revert?

--- a/samples/game/index.html
+++ b/samples/game/index.html
@@ -44,7 +44,7 @@
       <!-- Need to add section with code for game behavior. -->
     </main>
     <footer>
-      <p>View <a href="code.html">source code</a></p>
+      <p>View <a href="https://github.com/mcastillo1030/portfolio/blob/master/samples/game/scripts/game.js">source code at GitHub</a></p>
       <p>Photo of feline friend "Sockey" by Professor Dan Hall.</p>
       <p id="copyright">Website design, game programming, and logic by <a href="../../index.html">Marlon Castillo</a>.</p>
     </footer>
