favicon edits (again)

--- a/samples/book/index.html
+++ b/samples/book/index.html
@@ -6,6 +6,10 @@
       <meta name="author" content="Marlon Castillo">
       <meta name="description" content="The Golden Compass is an award-winning and critically acclaimed novel originally written for children, but whose message reaches to all ages. Full of fantastical worlds and creatures, this thrilling adventure will awaken the creativity of even the most uninspired.">
       <link rel="stylesheet" type="text/css" href="display.css">
+      <link rel="apple-touch-icon" sizes="180x180" href="../../images/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="../../images/favicon-16x16.png">
+      <link rel="manifest" href="../../site.webmanifest">
       <title>The Golden Compass</title>
    </head>
    <body id="top">
