--- a/samples/podcast/index.html
+++ b/samples/podcast/index.html
@@ -5,7 +5,11 @@
 		<meta name="description" content="Listen to the real stories behind some of the world's most well-known folklore.">
 		<meta name="viewport" content="width=device-width, intitial-scale=1">
 		<meta name="author" content="Marlon Castillo">
-      <link rel="stylesheet" href="display.css">
+		<link rel="stylesheet" href="display.css">
+		<link rel="apple-touch-icon" sizes="180x180" href="../../images/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="../../images/favicon-16x16.png">
+		<link rel="manifest" href="../../site.webmanifest">
 		<script src="https://kit.fontawesome.com/3d927e8363.js" crossorigin="anonymous"></script>
 		<title>Lore Podcast</title>
 	</head>
