--- a/index.html
+++ b/index.html
@@ -93,25 +93,34 @@
                <div class="card-section contact">
                   <h2>Contact Marlon</h2>
                   <p>The fastest way for me to respond is via email below. You may also find me on social media by following the links above.</p>
-                  <form id="contact-form">
+                  <form id="contact-form" action="http://www.marloncastillo.dev/cgi-sys/formmail.pl" method="post" name="hgmailer">
+                     <!-- http://www.marloncastillo.dev/cgi-sys/formmail.pl -->
                      <div class="form-group">
                         <input type="text" id="name" name="name" required>
                         <label for="name">Name</label>
+                        <p id="name-err"></p>
                      </div>
                      <div class="form-group">
                         <input type="text" id="email" name="email" required>
                         <label for="email">Email</label>
+                        <p id="email-err"></p>
                      </div>
                      <div class="form-group">
-                        <textarea id="message" name="message" rows="5" cols="33" required></textarea>
+                        <textarea id="message" name="comment" rows="5" cols="33" required></textarea>
                         <label for="message">Your message</label>
+                        <p id="msg-err"></p>
+                     </div>
+                     <div class="hidden-group">
+                        <input type="hidden" name="recipient" value="marlon@marloncastillo.dev">
+                        <input type="hidden" name="subject" value="Contact request from developer web site">
+                        <input type="hidden" name="redirect" value="https://www.marloncastillo.dev/contact_confirm.html">
                      </div>
                      <div class="form-group button-group">
-                        <button type="submit" name="submit" id="submit">Send</button>
+                        <button name="submit-btn" id="submit-btn">Send</button>
                         <button type="reset" id="clear"><span>Clear</span></button>
                      </div>
                   </form><!-- end form -->
-                  <!--<a id="email" href="mailto:marlon.castillo93@icloud.com">marlon.castillo93@icloud.com</a>-->
+
                </div>
             </div><!-- end card -->
          </main>
@@ -126,5 +135,6 @@
             $('html').removeClass('hidden');
          });  
       </script>
+      <script src="scripts/contact.js" type="text/javascript"></script>
     </body>
 </html>
