Minor spelling corrections

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 
                <div class="card-section personal">
                   <h2>Other Interests</h2>
-                  <p>Aside from front- and back-end programming, I like to spend my time with friends and family. On my down time I can be found with my nose buried in a good book, from Stephen King to Neil Gaiman. I am also a fervent Marvel Cinematic Universe fan, and am still licking my wounds over the years I devoted to Game of Thrones on HBO only to hate the ending.</p>
+                  <p>Aside from front- and back-end programming, I like to spend my time with friends and family. On my down time I can be found with my nose buried in a good book, from Stephen King to Neil Gaiman. I am also a fervent Marvel Cinematic Universe fan, and am still licking my wounds over the years I devoted to Game of Thrones on HBO only to be severely disappointed at the ending.</p>
                </div>
 
                <div class="card-section contact">
                   <h2>Contact Marlon</h2>
-                  <p>Send me some information below to discuss any questions or if you'd like to work together.</p>
+                  <p>Complete the following form to discuss any questions or if you'd like to work together.</p>
                   <form id="contact-form" name="contact-form">
                      <div class="form-group">
                         <input type="text" id="name" name="name" required>
